--- a/src/app/pages/landing/landing.component.css
+++ b/src/app/pages/landing/landing.component.css
@@ -1,11 +1,13 @@
 .bg {
-  width: 100%;
-  height: 100%;
-  background: url("../../../assets/images/full_page.png") no-repeat top;
-  background-size: cover; }
+	width: 100%;
+	height: 100%;
+	background: url("../../../assets/images/full_page.png") no-repeat top;
+	background-size: cover;
+}
 
 .center {
-  display: flex;
-  justify-content: center; }
+	display: flex;
+	justify-content: center;
+}
 
 /*# sourceMappingURL=landing.component.css.map */
